# AlexaPi

./: .gitignore  Makefile.am  aclocal.m4  configure.ac
alexapi/: AlexaCustomSkill  AlexaCustomSkill.service.in  AlexaPi  AlexaPi.in  AlexaPi.service.in  Makefile.am  config.yaml  gpio
lib/: Makefile.am  config.py.in
lib/device_platforms/: Makefile.am  rpilikeplatform.py
lib/playback_handlers/: Makefile.am
lib/triggers/: Makefile.am
resources/: Makefile.am
src/: Makefile.am
src/alexapi/: Makefile.am
