#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([AlexaPi], [1.0], [https://github.com/alexa-pi/AlexaPi])

AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_PATH_PYTHON([2.7])
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])

AC_CONFIG_FILES([src/alexapi/Makefile])

AC_CONFIG_FILES([src/alexapi/device_platforms/Makefile])
AC_CONFIG_FILES([src/alexapi/playback_handlers/Makefile])
AC_CONFIG_FILES([src/alexapi/triggers/Makefile])
AC_OUTPUT
