ALEXAPI_DEVICE_PLATFORM_SRCS =	baseplatform.py \
				hyperionplatform.py \
				raspberrypiplatform.py \
				chipplatform.py \
				rpilikeplatform.py \
				desktopplatform.py \
				magicmirrorplatform.py \
				serialplatform.py \
				dummyplatform.py \
				orangepiplatform.py

alexapideviceplatformdir = $(pythondir)/alexapi/device_platforms
alexapideviceplatform_PYTHON = ${ALEXAPI_DEVICE_PLATFORM_SRCS}

alexapideviceplatform_DATA = __init__.py
